--- a/public/styles/admin/admin-panel.css
+++ b/public/styles/admin/admin-panel.css
@@ -2,19 +2,20 @@
     margin: 0;
     padding: 0;
     list-style: none;
+    box-sizing: border-box;
+    
 }
-body{
-    background: #e0f2f1;
+html, body {
     height: 100%;
-}
-
+    background: #e0f2f1;
+  }
 .sidebar{
-    position: fixed;
-    left: 0;
-    width: 220px;
+    float: left;
+    width: 15%;
     height: 100%;
     background: #00897b;
 }
+
 
 .sidebar header{
     font-size: 20px;
@@ -42,6 +43,9 @@ ul li:hover a{
 }
 
 main{
+    float: right;
+    width: 85%;
     height: 100%;
     background: #e0f2f1;
+    color: black;
 }
