--- a/public/styles/admin/navbar.css
+++ b/public/styles/admin/navbar.css
@@ -9,9 +9,11 @@ html, body {
     background: #e0f2f1;
   }
 .sidebar{
+    overflow: auto;
+    position: fixed;
     float: left;
     width: 15%;
-    height: 100%;
+    height: 100vh;
     background: #00897b;
 }
 
