use new font family for site

--- a/public/styles/main_navbar.css
+++ b/public/styles/main_navbar.css
@@ -166,5 +166,6 @@
     background: linear-gradient(to right, #5ba4cf ,#055a8c, #055a8c,  #242444);
     margin: 0;
     height: 100%;
+    font-family: 'Times New Roman', serif;
   }
   
